# sentinelforge

./: .gitignore  BEGINNER_GUIDE.md  CNAME  INSTALL_SENTINELFORGE_v1.5.md  LICENSE  README.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.5.1.md  SECURITY.md  SENTINELFORGE_V1_PLAN.md  SUPPORT.md  pyproject.toml  wrangler.jsonc
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_baseline_review.yml
.github/workflows/: ci.yml  deploy-pages.yml
docs/: LEADS.md  OUTREACH_PLAYBOOK.md  SAMPLE_SECURITY_BASELINE_REPORT.md
sentinelforge/: ci.py  cli.py  doctor.py  dynamic.py  explain.py  gate.py  kev.py  license.py  models.py  normalization.py  policy.py  redaction.py  reporting.py  scan_config.py  scanner.py  scoring.py  suppression.py  targeting.py
sentinelforge/agents/: ai_app_agent.py  blue_team_agent.py  container_iac_agent.py  dependency_agent.py  product_profile_agent.py  route_inventory_agent.py  secrets_agent.py  static_analysis_agent.py
sentinelforge/policies/: default_policy.yaml
sentinelforge/prompts/: agent_layer.md  orchestrator.md
sentinelforge/tools/: bandit_runner.py  base.py  generic.py  gitleaks_runner.py  osv_runner.py  semgrep_runner.py  trivy_runner.py
tests/: test_cli_static_scan.py  test_deduplication.py  test_doctor_and_gate.py  test_e2e_vulnerable_project.py  test_license_gate.py  test_product_readiness_profile.py  test_redaction.py  test_report_schema.py  test_scoring.py  test_self_scan_scope.py  test_targeting.py  test_v15_ai_routes_html_badge.py  test_v15_policy_explain_ci.py  test_v15_scanners_kev_suppression.py  test_v1_metadata.py
tests/fixtures/vulnerable_python_app/: Dockerfile  app.py  requirements.txt
website/: index.html
