[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelforge"
version = "1.5.0"
description = "Authorized DevSecOps security scanner and risk grader"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "pyyaml>=6",
  "rich>=13"
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
sentinelforge = "sentinelforge.cli:app"

[tool.setuptools.packages.find]
include = ["sentinelforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
