[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelforge"
version = "1.5.1"
description = "Local-first security scanner for authorized code and configurations"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "SentinelForge contributors" }]
keywords = ["security", "devsecops", "sast", "ai-security", "cli", "security-scanner"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "pyyaml>=6",
  "rich>=13",
  "cryptography>=42"
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
sentinelforge = "sentinelforge.cli:app"

[tool.setuptools.packages.find]
include = ["sentinelforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
